<resources>
    <string name="app_name">Catering &amp; Eventos Ale</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Catering &amp; Eventos Ale</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!--Menus-->
    <string name="menu_registrarpedido">Registrar pedido</string>
    <string name="menu_mispedidos">Mis pedidos</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_promociones">Promociones</string>
    <string name="menu_zonasatencion">Zonas de atención</string>
    <string name="menu_miperfil">Mi perfil</string>
    <string name="menu_iniciarsesion">Iniciar sesión</string>
    <string name="menu_cerrarsesion">Cerrar sesión</string>

    <!--Registrar cuenta-->
    <string name="lblRegistrarCuenta">Datos del Usuario</string>
    <string name="lblNombre">Nombre completo</string>
    <string name="lblCorreo">Correo</string>
    <string name="lblContraseña">Contraseña</string>
    <string name="lblTelefono">Teléfono</string>
    <string name="lblDireccion">Dirección</string>
    <string name="btnRegistrarCuenta">Crear cuenta</string>

    <!--Registrar cuenta-->
    <string name="lblActualizarCuenta">Perfil de Usuario</string>
    <string name="btnActualizarCuenta">Actualizar perfil</string>


    <!--Zonas de venta-->
    <string name="lblTituloZonaAtencion">Zonas de atención</string>


    <!--Iniciar sesión-->
    <string name="lblISTitulo">Iniciar sesión</string>
    <string name="lblISUsuario">Usuario</string>
    <string name="lblISContraseña">Contraseña</string>
    <string name="btnISIngresar">Ingresar</string>
    <string name="btnISCrearCuenta">Crear cuenta</string>

    <!--Promociones-->
    <string name="lblPSTituloPromociones">Lista de productos en promoción</string>

    <!--Registrar pedido-->
    <string name="lblRPTituloRegistrarPedido">Nuevo Pedido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
