<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cateringaleapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.cateringaleapp.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.cateringaleapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.cateringaleapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_registrarpedido"
        android:name="com.example.cateringaleapp.ui.registrarpedido.RegistrarPedidoFragment"
        android:label="@string/menu_registrarpedido"
        tools:layout="@layout/registrar_pedido_fragment" />

    <fragment
        android:id="@+id/nav_promociones"
        android:name="com.example.cateringaleapp.ui.promociones.PromocionesFragment"
        android:label="@string/menu_promociones"
        tools:layout="@layout/promociones_fragment" />

    <fragment
        android:id="@+id/nav_zonasatencion"
        android:name="com.example.cateringaleapp.ui.zonasatencion.ZonasAtencionFragment"
        android:label="@string/menu_zonasatencion"
        tools:layout="@layout/zonas_atencion_fragment" />

    <fragment
        android:id="@+id/nav_miperfil"
        android:name="com.example.cateringaleapp.ui.miperfil.MiPerfilFragment"
        android:label="@string/menu_miperfil"
        tools:layout="@layout/mi_perfil_fragment" />

    <fragment
        android:id="@+id/nav_iniciarsesion"
        android:name="com.example.cateringaleapp.ui.iniciarsesion.IniciarSesion"
        android:label="@string/menu_iniciarsesion"
        tools:layout="@layout/iniciar_sesion_fragment" />

</navigation>