<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_registrarpedido"
            android:icon="@mipmap/img_menu_nuevo_pedido"
            android:title="@string/menu_registrarpedido" />-->
        <item
            android:id="@+id/nav_mispedidos"
            android:icon="@mipmap/img_menu_mis_pedidos"
            android:title="@string/menu_mispedidos" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@mipmap/img_menu_producto"
            android:title="@string/menu_productos" />
        <!--<item
            android:id="@+id/nav_promociones"
            android:icon="@mipmap/img_menu_promocion"
            android:title="@string/menu_promociones" />-->
        <item
            android:id="@+id/nav_zonasatencion"
            android:icon="@mipmap/img_menu_zonas_atencion"
            android:title="@string/menu_zonasatencion" />
        <item
            android:id="@+id/nav_miperfil"
            android:icon="@mipmap/img_menu_mi_perfil"
            android:title="@string/menu_miperfil" />

        <!--<item
            android:id="@+id/nav_iniciarsesion"
            android:icon="@mipmap/img_menu_iniciar_sesion"
            android:title="@string/menu_iniciarsesion" />-->
        <item
            android:id="@+id/nav_cerrarsesion"
            android:icon="@mipmap/img_menu_cerrar_sesion"
            android:title="@string/menu_cerrarsesion" />
    </group>
</menu>
