<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.miperfil.MiPerfilFragment" >

    <TextView
        android:id="@+id/txtTituloRegistrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:textSize="25dp"
        android:textAlignment="center"
        android:text="@string/lblRegistrarUsuario"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblNombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCorreo" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/lblContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblContraseña" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/lblTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTelefono" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblDireccion" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistrarUsuario" />

</LinearLayout>