<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.miperfil.MiPerfilFragment" >



    <TextView
        android:id="@+id/txtTituloRegistrarUsuario"
        android:layout_width="294dp"
        android:layout_height="46dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:gravity="center_horizontal"
        android:text="@string/lblActualizarCuenta"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="330dp"
        android:layout_height="21dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="24dp"
        android:text="@string/lblNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloRegistrarUsuario" />


    <TextView
        android:id="@+id/lblCorreo"
        android:layout_width="331dp"
        android:layout_height="23dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="20dp"
        android:text="@string/lblCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="335dp"
        android:layout_height="45dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTelefono" />

    <TextView
        android:id="@+id/lblDireccion"
        android:layout_width="322dp"
        android:layout_height="22dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="24dp"
        android:text="@string/lblDireccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="326dp"
        android:layout_height="40dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblContraseña" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="322dp"
        android:layout_height="42dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDireccion" />

    <TextView
        android:id="@+id/lblTelefono"
        android:layout_width="330dp"
        android:layout_height="24dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="21dp"
        android:text="@string/lblTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseña" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="328dp"
        android:layout_height="36dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCorreo" />

    <TextView
        android:id="@+id/lblContraseña"
        android:layout_width="325dp"
        android:layout_height="22dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="24dp"
        android:text="@string/lblContraseña"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="338dp"
        android:layout_height="52dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="29dp"
        android:text="@string/btnActualizarCuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDireccion" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="330dp"
        android:layout_height="37dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNombre" />


</androidx.constraintlayout.widget.ConstraintLayout>